--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -7,21 +7,20 @@
         android:layout_height="match_parent"
         android:orientation="horizontal"
         tools:context=".MainActivity">
-    <LinearLayout android:orientation="vertical"
+    <LinearLayout android:orientation="vertical" android:layout_weight="1"
                   android:layout_height="match_parent"
-                  android:layout_width="match_parent"
-                  android:layout_weight="1">
+                  android:layout_width="match_parent">
         <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
-            <TextView android:layout_width="200dp"
-                      android:layout_weight="1"
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="2"
                       android:layout_height="match_parent"
                       android:text="@string/on_create" android:textSize="18sp" android:textColor="@android:color/background_dark"
                       android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"/>
 
-            <TextView android:layout_width="200dp"
+            <TextView android:layout_width="0dp"
                       android:layout_height="match_parent"
                       android:textAlignment="center"
                       android:layout_weight="1"
@@ -32,13 +31,14 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
-            <TextView android:layout_width="200dp"
+            <TextView android:layout_width="0dp"
                       android:layout_height="match_parent"
-                      android:layout_weight="1"
+                      android:layout_weight="2"
                       android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                       android:text="@string/on_start" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-            <TextView android:layout_width="200dp"
+            <TextView android:layout_width="0dp"
+                      android:textFontWeight="1"
                       android:layout_height="match_parent"
                       android:textAlignment="center"
                       android:layout_weight="1"
@@ -49,13 +49,13 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
-            <TextView android:layout_width="200dp"
-                      android:layout_weight="1"
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="2"
                       android:layout_height="match_parent"
                       android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                       android:text="@string/on_resume" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-            <TextView android:layout_width="200dp"
+            <TextView android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="match_parent"
                       android:textAlignment="center"
@@ -66,13 +66,13 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
-            <TextView android:layout_width="200dp"
-                      android:layout_weight="1"
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="2"
                       android:layout_height="match_parent"
                       android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                       android:text="@string/on_restart" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-            <TextView android:layout_width="200dp"
+            <TextView android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="match_parent"
                       android:textAlignment="center"
@@ -83,13 +83,13 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
-            <TextView android:layout_width="200dp"
-                      android:layout_weight="1"
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="2"
                       android:layout_height="match_parent"
                       android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                       android:text="@string/on_pause" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-            <TextView android:layout_width="200dp"
+            <TextView android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="match_parent"
                       android:textAlignment="center"
@@ -101,13 +101,13 @@
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
-            <TextView android:layout_width="200dp"
-                      android:layout_weight="1"
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="2"
                       android:layout_height="match_parent"
                       android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                       android:text="@string/on_stop" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-            <TextView android:layout_width="200dp"
+            <TextView android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="match_parent"
                       android:textAlignment="center"
@@ -115,32 +115,64 @@
                       android:id="@+id/onStop" android:textColor="@android:color/background_dark"/>
 
         </LinearLayout>
-        <LinearLayout
-                android:layout_height="wrap_content"
-                android:layout_width="match_parent"
-                android:orientation="horizontal">
-            <TextView android:layout_width="200dp"
-                      android:layout_weight="1"
+        <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="2"
                       android:layout_height="match_parent"
                       android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                       android:text="@string/on_destroy" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-            <TextView android:layout_width="200dp"
+            <TextView android:layout_width="0dp"
                       android:layout_weight="1"
                       android:layout_height="match_parent"
                       android:textAlignment="center"
                       android:gravity="center"
                       android:id="@+id/onDestroy" android:textColor="@android:color/background_dark"/>
-
         </LinearLayout>
     </LinearLayout>
-    <Button android:text="@string/reset"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:id="@+id/reset"
-            android:layout_gravity="bottom"
-            android:layout_margin="10dp"
-            android:background="@color/colorPrimary" android:textColor="@android:color/background_light"
-            android:textSize="14sp" android:textStyle="bold"/>
+    <LinearLayout android:layout_weight="1" android:orientation="vertical"
+                  android:layout_height="match_parent" android:layout_width="match_parent">
+        <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:orientation="horizontal">
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="2"
+                      android:layout_height="match_parent"
+                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:text="@string/on_save_instance_state" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="match_parent"
+                      android:textAlignment="center"
+                      android:gravity="center"
+                      android:id="@+id/onSaveInstanceState" android:textColor="@android:color/background_dark"/>
+        </LinearLayout>
+        <LinearLayout
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:orientation="horizontal">
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="2"
+                      android:layout_height="match_parent"
+                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:text="@string/on_restore_instance_state" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
+
+            <TextView android:layout_width="0dp"
+                      android:layout_weight="1"
+                      android:layout_height="match_parent"
+                      android:textAlignment="center"
+                      android:gravity="center"
+                      android:id="@+id/onRestoreInstanceState" android:textColor="@android:color/background_dark"/>
+        </LinearLayout>
+        <Button android:text="@string/reset"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/reset"
+                android:layout_gravity="center_vertical"
+                android:layout_margin="10dp"
+                android:background="@color/colorPrimary" android:textColor="@android:color/background_light"
+                android:textSize="14sp" android:textStyle="bold"/>
+    </LinearLayout>
 </LinearLayout>
