--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,13 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="horizontal">
-        <TextView android:layout_width="200dp"
-                  android:layout_weight="1"
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="2"
                   android:layout_height="match_parent"
                   android:text="@string/on_create" android:textSize="18sp" android:textColor="@android:color/background_dark"
                   android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"/>
 
-        <TextView android:layout_width="200dp"
+        <TextView android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:textAlignment="center"
                   android:layout_weight="1"
@@ -28,13 +28,13 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="horizontal">
-        <TextView android:layout_width="200dp"
+        <TextView android:layout_width="0dp"
                   android:layout_height="match_parent"
-                  android:layout_weight="1"
+                  android:layout_weight="2"
                   android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                   android:text="@string/on_start" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-        <TextView android:layout_width="200dp"
+        <TextView android:layout_width="0dp"
                   android:layout_height="match_parent"
                   android:textAlignment="center"
                   android:layout_weight="1"
@@ -45,13 +45,13 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="horizontal">
-        <TextView android:layout_width="200dp"
-                  android:layout_weight="1"
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="2"
                   android:layout_height="match_parent"
                   android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                   android:text="@string/on_resume" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-        <TextView android:layout_width="200dp"
+        <TextView android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="match_parent"
                   android:textAlignment="center"
@@ -62,13 +62,13 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="horizontal">
-        <TextView android:layout_width="200dp"
-                  android:layout_weight="1"
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="2"
                   android:layout_height="match_parent"
                   android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                   android:text="@string/on_restart" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-        <TextView android:layout_width="200dp"
+        <TextView android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="match_parent"
                   android:textAlignment="center"
@@ -79,13 +79,13 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="horizontal">
-        <TextView android:layout_width="200dp"
-                  android:layout_weight="1"
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="2"
                   android:layout_height="match_parent"
                   android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                   android:text="@string/on_pause" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-        <TextView android:layout_width="200dp"
+        <TextView android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="match_parent"
                   android:textAlignment="center"
@@ -97,13 +97,13 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="horizontal">
-        <TextView android:layout_width="200dp"
-                  android:layout_weight="1"
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="2"
                   android:layout_height="match_parent"
                   android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                   android:text="@string/on_stop" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-        <TextView android:layout_width="200dp"
+        <TextView android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="match_parent"
                   android:textAlignment="center"
@@ -115,18 +115,54 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:orientation="horizontal">
-        <TextView android:layout_width="200dp"
-                  android:layout_weight="1"
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="2"
                   android:layout_height="match_parent"
                   android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
                   android:text="@string/on_destroy" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
-        <TextView android:layout_width="200dp"
+        <TextView android:layout_width="0dp"
                   android:layout_weight="1"
                   android:layout_height="match_parent"
                   android:textAlignment="center"
                   android:gravity="center"
                   android:id="@+id/onDestroy" android:textColor="@android:color/background_dark"/>
+
+    </LinearLayout>
+    <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="2"
+                  android:layout_height="match_parent"
+                  android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                  android:text="@string/on_save_instance_state" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
+
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="1"
+                  android:layout_height="match_parent"
+                  android:textAlignment="center"
+                  android:gravity="center"
+                  android:id="@+id/onSaveInstanceState" android:textColor="@android:color/background_dark"/>
+
+    </LinearLayout>
+    <LinearLayout
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:orientation="horizontal">
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="2"
+                  android:layout_height="match_parent"
+                  android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                  android:text="@string/on_restore_instance_state" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
+
+        <TextView android:layout_width="0dp"
+                  android:layout_weight="1"
+                  android:layout_height="match_parent"
+                  android:textAlignment="center"
+                  android:gravity="center"
+                  android:id="@+id/onRestoreInstanceState" android:textColor="@android:color/background_dark"/>
 
     </LinearLayout>
     <Button android:text="@string/reset"
