--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -15,10 +15,10 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
             <TextView android:layout_width="0dp"
-                      android:layout_weight="2"
+                      android:layout_weight="3"
                       android:layout_height="match_parent"
                       android:text="@string/on_create" android:textSize="18sp" android:textColor="@android:color/background_dark"
-                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"/>
+                      android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"/>
 
             <TextView android:layout_width="0dp"
                       android:layout_height="match_parent"
@@ -33,8 +33,8 @@
                 android:orientation="horizontal">
             <TextView android:layout_width="0dp"
                       android:layout_height="match_parent"
-                      android:layout_weight="2"
-                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:layout_weight="3"
+                      android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                       android:text="@string/on_start" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
             <TextView android:layout_width="0dp"
@@ -50,9 +50,9 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
             <TextView android:layout_width="0dp"
-                      android:layout_weight="2"
+                      android:layout_weight="3"
                       android:layout_height="match_parent"
-                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                       android:text="@string/on_resume" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
             <TextView android:layout_width="0dp"
@@ -67,9 +67,9 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
             <TextView android:layout_width="0dp"
-                      android:layout_weight="2"
+                      android:layout_weight="3"
                       android:layout_height="match_parent"
-                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                       android:text="@string/on_restart" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
             <TextView android:layout_width="0dp"
@@ -84,9 +84,9 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
             <TextView android:layout_width="0dp"
-                      android:layout_weight="2"
+                      android:layout_weight="3"
                       android:layout_height="match_parent"
-                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                       android:text="@string/on_pause" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
             <TextView android:layout_width="0dp"
@@ -102,9 +102,9 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
             <TextView android:layout_width="0dp"
-                      android:layout_weight="2"
+                      android:layout_weight="3"
                       android:layout_height="match_parent"
-                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                       android:text="@string/on_stop" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
             <TextView android:layout_width="0dp"
@@ -117,9 +117,9 @@
         </LinearLayout>
         <LinearLayout android:layout_height="wrap_content" android:layout_width="match_parent" android:orientation="horizontal">
             <TextView android:layout_width="0dp"
-                      android:layout_weight="2"
+                      android:layout_weight="3"
                       android:layout_height="match_parent"
-                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                       android:text="@string/on_destroy" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
             <TextView android:layout_width="0dp"
@@ -129,17 +129,14 @@
                       android:gravity="center"
                       android:id="@+id/onDestroy" android:textColor="@android:color/background_dark"/>
         </LinearLayout>
-    </LinearLayout>
-    <LinearLayout android:layout_weight="1" android:orientation="vertical"
-                  android:layout_height="match_parent" android:layout_width="match_parent">
         <LinearLayout
                 android:layout_height="wrap_content"
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
             <TextView android:layout_width="0dp"
-                      android:layout_weight="2"
+                      android:layout_weight="3"
                       android:layout_height="match_parent"
-                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                       android:text="@string/on_save_instance_state" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
             <TextView android:layout_width="0dp"
@@ -154,9 +151,9 @@
                 android:layout_width="match_parent"
                 android:orientation="horizontal">
             <TextView android:layout_width="0dp"
-                      android:layout_weight="2"
+                      android:layout_weight="3"
                       android:layout_height="match_parent"
-                      android:paddingLeft="20dp" android:paddingTop="10dp" android:paddingBottom="10dp"
+                      android:paddingLeft="20dp" android:paddingTop="4dp" android:paddingBottom="4dp"
                       android:text="@string/on_restore_instance_state" android:textSize="18sp" android:textColor="@android:color/background_dark"/>
 
             <TextView android:layout_width="0dp"
@@ -166,13 +163,15 @@
                       android:gravity="center"
                       android:id="@+id/onRestoreInstanceState" android:textColor="@android:color/background_dark"/>
         </LinearLayout>
+    </LinearLayout>
+    <LinearLayout android:layout_weight="1" android:orientation="horizontal" android:layout_height="match_parent" android:layout_width="match_parent">
         <Button android:text="@string/reset"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/reset"
-                android:layout_gravity="center_vertical"
-                android:layout_margin="10dp"
+                android:layout_gravity="center"
+                android:layout_margin="20dp"
                 android:background="@color/colorPrimary" android:textColor="@android:color/background_light"
-                android:textSize="14sp" android:textStyle="bold"/>
+                android:textSize="16sp" android:textStyle="bold"/>
     </LinearLayout>
 </LinearLayout>
